# deployrelay

./: .env.example  Cargo.toml  Dockerfile  go.mod  main.go
.github/workflows/: pipeline.yml
internal/discord/: discord.go
internal/webhook/: handler.go
src/: main.rs
