[package]
name = "deployrelay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", default-features = false, features = [
    "rustls_backend",
    "model",
    "chrono",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
